--- a/lab2/exercice6.html
+++ b/lab2/exercice6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 2: HTML and CSS</title>
+    <title>Lab 2: Exercice 6</title>
 
     <!--EXERCICE 2: -->
     <style>
@@ -72,16 +72,6 @@
             font-family: cursive;
         }
 
-        /* ECERCICE 7:*/
-        #reverse {
-            counter-reset: num;
-            list-style-type: none;
-        }
-
-        #reverse li::before {
-            counter-increment: num -1;
-            content: counters(num, ".") ". ";
-        }
     </style>
 </head>
 
@@ -148,13 +138,6 @@
                 <li>"Breaking bad" (<a href="https://www.amazon.com/Breaking-Bad-Season-1/dp/B0012QRPU4"
                         target="_blank">Amazon Link</a>)</li>
             </ol>
-            <!--EXERCICE 7: -->
-            <script>
-                var list = document.getElementById("reverse");
-                var items = list.getElementsByTagName("li");
-                var startingValue = items.length + 1;
-                list.style.counterReset = "num " + startingValue;
-            </script>
         </dd>
     </dl>
 
@@ -194,16 +177,3 @@
 
 </html>
 
-<!--EXERCICE 1: see code-->
-
-<!--EXERCICE 2: see code-->
-
-<!--EXERCICE 3/4: the validation of both HTML and CSS have been done. The pages are also hosted in Github Pages and accessed using the link: https://mahdi-ouchrahou.github.io/web-app-dev-labs/lab2/lab2.html -->
-
-<!--EXERCICE 5: The :hover and the :link pseudo-classes allowed to complete the first task. The second task was acheved using the ::first-letter pseudo-class and the calc() function.-->
-
-<!--EXERCICE 6: see code-->
-
-<!--EXERCICE 7: see code. In order to decrement ol elements, I found many ways to achieve that using only css. The first method that I did not use here onsist of rotating the numbering of ol horizentally and vertically. It is a solution but it looked more like a "hack" than an actual solution.
-The method I implemented is based on the "counter-reset" css variable. The method consist of declaring and initializing the variable to the number of elements in you ol +1. Then using the funvction "counter increment" and the value -1, we decrement the "counter-reset" variable by 1 at each iteration of li tag and print it as the numbering index. 
-NB: Using only CSS it is only possible to achieve this implementation knowing in advance the number of il tags inside your ol list. In order to initialize the "counter-reset" variable dynamically, even though it is not part of the exercice, I added a javascript code that computes the number of li tags inside the ol element and stoe the value in "num" varibale. Then the script modify the respective CSS rule such that the "counte-reset" variable is initialized to the value of "num" -->
