final commit of all the labs

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -138,5 +138,5 @@
     </ul></p>
 </footer>
 <hr>
-<p>last update by Mahdi Ouchrahou, March 28, 2023</p>
+<p>&copy; last update by Mahdi Ouchrahou, March 28, 2023</p>
 </html>
