--- a/lab2/exercice7.html
+++ b/lab2/exercice7.html
@@ -178,7 +178,7 @@
 
 
     <footer>
-        <p>Last edited by Mahdi Ouchrahou. 28 March 2023</p>
+        <p>&copy; Last edited by Mahdi Ouchrahou. 28 March 2023</p>
         <p class="image">
             <a href="http://jigsaw.w3.org/css-validator/" target="_blank">
                 <img src="img/vcss.gif" alt="Valid CSS!">
